<resources>
    <string name="app_name">PLACEMENT CELL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about_college">About College</string>
    <string name="title_activity_about_tpo">About TPO</string>
    <string name="title_activity_upcoming_drives">Upcoming Drives</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_recent_drives">Recent Drives</string>
    <string name="title_activity_recent_activities">Activities</string>
    <string name="title_activity_preparation">Preparation</string>
    <string name="title_activity_message">Message To TPO</string>
    <string name="title_activity_last_year_placements">2017-18 Placements</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_about_tpc">About TPC</string>
    <string name="title_activity_registration">Registration</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">News Description</string>
    <string-array name="ilm">
        <item>*******,***,MPCS</item>
    </string-array>
    <string-array name="aditya">
        <item>*******,***,MPC</item>
    </string-array>

    <string-array name="aircel">
        <item>*******,***,B.COM</item>
    </string-array>

    <string-array name="tcs_it">
        <item>*******,***,BCA</item>
    </string-array>
    <string-array name="tcs_bpo">
        <item>*******,***,MPC</item>
    </string-array>
    <string-array name="tcs_ignite">
        <item>*******,***,MPCS</item>
    </string-array>
    <string-array name="infosys">
        <item>*******,***,MPCS</item>
    </string-array>
    <string-array name="lt">
        <item>*******,***,BZC</item>
    </string-array>
    <string-array name="genpact">
        <item>*******,***,MECS</item>
    </string-array>
    <string-array name="suthernland">
        <item>*******,***,BA</item>
    </string-array>
    <string-array name="eenadu">
        <item>*******,***,BA</item>
    </string-array>
    <string-array name="techmahindra">
        <item>*******,***,BCA</item>
    </string-array>
    <string-array name="ipropat">
        <item>*******,***,BZC</item>
    </string-array>
    <string-array name="laurus">
        <item>*******,***,BZC</item>
    </string-array>
    <string-array name="avontix">
        <item>*******,***,BZC</item>
    </string-array>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_add_or_update_upcoming">Add Or Update Upcoming Drive</string>
    <string name="title_activity_upcoming_detail">Recruitment Details</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Placement Cell App now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
   <string name="btn_back">
 <![CDATA[ << Back
  ]]>
  </string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_aptitude">Aptitude</string>
</resources>
